// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons block transforms to Columns block 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column {"width":"100%"} -->
<div class="fin-block-column" style="flex-basis:100%"><!-- fin:buttons -->
<div class="fin-block-buttons"><!-- fin:button -->
<div class="fin-block-button"><a class="fin-block-button__link fin-element-button">Solid Button</a></div>
<!-- /fin:button -->

<!-- fin:button {"gradient":"luminous-vivid-amber-to-luminous-vivid-orange"} -->
<div class="fin-block-button"><a class="fin-block-button__link has-luminous-vivid-amber-to-luminous-vivid-orange-gradient-background has-background fin-element-button">Gradient Button</a></div>
<!-- /fin:button --></div>
<!-- /fin:buttons --></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Buttons block transforms to Group block 1`] = `
"<!-- fin:group {"layout":{"type":"constrained"}} -->
<div class="fin-block-group"><!-- fin:buttons -->
<div class="fin-block-buttons"><!-- fin:button -->
<div class="fin-block-button"><a class="fin-block-button__link fin-element-button">Solid Button</a></div>
<!-- /fin:button -->

<!-- fin:button {"gradient":"luminous-vivid-amber-to-luminous-vivid-orange"} -->
<div class="fin-block-button"><a class="fin-block-button__link has-luminous-vivid-amber-to-luminous-vivid-orange-gradient-background has-background fin-element-button">Gradient Button</a></div>
<!-- /fin:button --></div>
<!-- /fin:buttons --></div>
<!-- /fin:group -->"
`;
